# oblique

./: .flake8  README.md  pyproject.toml  tox.ini
.github/workflows/: test.yml
oblique/: __init__.py
src/oblique/: __init__.py  __main__.py  strategies.ini
tests/: test_oblique.py
