[tool.poetry]
name = "oblique"
version = "25.1.0"
description = "Show koans from Oblique Strategies"
authors = ["Łukasz Langa <lukasz@langa.pl>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/ambv/oblique"
include = ["oblique/strategies.ini"]

[tool.poetry.scripts]
oblique = 'oblique:main'

[tool.poetry.dependencies]
python = ">=3.7"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"
flake8-bugbear = "^22.1.11"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
