[tool.poetry]
name = "oblique"
version = "25.2.0"  # also update oblique/__init__.py
description = "Show koans from Oblique Strategies"
authors = ["Łukasz Langa <lukasz@langa.pl>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/ambv/oblique"
include = ["oblique/strategies.ini"]

[tool.poetry.scripts]
oblique = 'oblique:main_command'

[tool.poetry.dependencies]
python = ">=3.9"
click = "^8.1.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^25.1.0"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
